<resources>
    <string name="app_name">Per La Gloria</string>

    <!-- Choose another team -->
    <string name="action_choose_another_team">Seleccionar nuevo equipo</string>

    <string name="server_host">http://perlagloria.com</string>

    <!-- Next -->
    <string name="next">SIGUIENTE</string>

    <!-- Check your Internet connection -->
    <string name="check_connection_dialog">Comprueba tu conexión a internet</string>

    <!-- CLOSE -->
    <string name="alert_dialog_close">Cerrar</string>

    <!-- Are you sure you want to exit? -->
    <string name="sure_exit_dialog">¿Seguro que quieres salir?</string>

    <!-- YES -->
    <string name="sure_exit_dialog_yes">Si</string>

    <!-- NO -->
    <string name="sure_exit_dialog_no">No</string>

    <!-- No information for next match-->
    <string name="no_info_for_next_match">No hay información del próximo partido</string>

    <!-- Not available-->
    <string name="not_available">No disponible</string>

    <!-- Choose your team -->
    <string name="toolbar_choose_team_title">SELECCIONAR DATOS</string>

    <!-- Championship -->
    <string name="championship">Campeonato</string>

    <!-- Tournament -->
    <string name="tournament">Torneo</string>

    <!-- Division -->
    <string name="division">División</string>

    <!-- Next game -->
    <string name="next_game">PRÓXIMO PARTIDO</string>

    <!-- Map Code -->
    <string name="field_number">Cancha: %1$s</string>

    <!-- Statistics -->
    <string name="statistics">ESTADÍSTICAS</string>

    <!-- How to get -->
    <string name="how_to_get">¿CÓMO LLEGAR?</string>

    <!-- About us -->
    <string name="about_us">Quiénes somos</string>

    <!-- Positions -->
    <string name="positions">Posiciones</string>

    <!-- Sport event -->
    <string name="sport_event">Fixture</string>

    <!-- Map -->
    <string name="fixture_match_map">Mapa</string>

    <!-- Scorers -->
    <string name="scorers">Goleadores</string>

    <!-- Positions fragment -->
    <string name="positions_fragment_title">POSICIONES</string>

    <!-- Scorers fragment -->
    <string name="scorers_fragment_title">GOLEADORES</string>

    <!-- Fixture match map fragment -->
    <string name="fixture_match_map_fragment_title">MAPA DEL PREDIO</string>

    <!-- Powered by on the splashscreen -->
    <string name="powered_by">Powered by</string>

    <!-- Image not available -->
    <string name="image_not_available">Imagen no disponible</string>

    <!-- Please wait -->
    <string name="please_wait">Por favor espera</string>

    <!-- Loading coordinates -->
    <string name="loading_coordinates">Coordenadas de carga</string>

    <!-- Google Maps is not found -->
    <string name="google_maps_not_found">Google Maps no se encuentra</string>

    <!-- table columns name -->
    <string name="points">Pts</string>
    <string name="gamesPlayed">PJ</string>
    <string name="wins">PG</string>
    <string name="ties">PE</string>
    <string name="losses">PP</string>
    <string name="goalsFor">GF</string>
    <string name="goalsAgainst">GC</string>

    <string name="team">EQUIPO</string>
    <string name="player">JUGADOR</string>
    <string name="goals">GOLES</string>

</resources>
