<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#BCBCC1"
    android:padding="5dp">

    <TextView
        android:id="@+id/teamTVHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxWidth="140dp"
        android:singleLine="true"
        android:text="@string/team"
        android:textColor="#0C2642"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pointsTVHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/points"
        android:textColor="#0C2642"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/winsTVHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/wins"
        android:textColor="#0C2642"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tiesTVHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/ties"
        android:textColor="#0C2642"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lossesTVHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/losses"
        android:textColor="#0C2642"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/goalsForTVHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/goalsFor"
        android:textColor="#0C2642"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/goalsAgainstTVHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/goalsAgainst"
        android:textColor="#0C2642"
        android:textStyle="bold" />
</TableRow>